--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApplication1Context": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ZeldaWebsiteContext": "Server=(localdb)\\mssqllocaldb;Database=ZeldaWebsite.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
