Adress check integrated

--- a/ZeldaWebsite/appsettings.json
+++ b/ZeldaWebsite/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  
+
   "ConnectionStrings": {
-    "ZeldaWebsiteContext": "Server=(localdb)\\mssqllocaldb;AttachDbFilename=C:\\Users\\ester\\AppData\\Local\\Microsoft\\Microsoft SQL Server Local DB\\Instances\\mssqllocaldb\\WebApplication1.Data.mdf;Database=ZeldaWebsite.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ZeldaWebsiteContext": "Server=(localdb)\\mssqllocaldb;AttachDbFilename=C:\\Users\\DELL\\AppData\\Local\\Microsoft\\Microsoft SQL Server Local DB\\Instances\\mssqllocaldb\\WebApplication1.Data.mdf;Database=ZeldaWebsite.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 
 }
