remote database integrated

--- a/ZeldaWebsite/appsettings.json
+++ b/ZeldaWebsite/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ZeldaWebsiteContext": "Server=(localdb)\\mssqllocaldb;AttachDbFilename=C:\\Users\\DELL\\AppData\\Local\\Microsoft\\Microsoft SQL Server Local DB\\Instances\\mssqllocaldb\\WebApplication1.Data.mdf;Database=ZeldaWebsite.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ZeldaWebsiteContext": "workstation id=FlavourDB.mssql.somee.com;packet size=4096;user id=TziporaMa_SQLLogin_1;pwd=73rpviej8j;data source=FlavourDB.mssql.somee.com;persist security info=False;initial catalog=FlavourDB"
   }
 
 }
